Fixed Bug and Improved Visibility on Enlistment
> Fixed the error not recalling existing enlistment
> Fixed visibility of field for the wizard/enlistment form

--- a/thesis_design_database_manager/static/src/css/custom_styles.css
+++ b/thesis_design_database_manager/static/src/css/custom_styles.css
@@ -21,3 +21,13 @@
         transform: scale(1.05);
     }
 }
+
+.underline-field input {
+    text-decoration: underline;
+}
+
+.underline-box input {
+    border: none;
+    border-bottom: 2px solid #5b1841;
+    outline: none;
+}
